--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,13 @@ source:
   sha256: c86626afe417a09d8e80e56780efcae3ae516203b23b5ade84813916e1c94fc1
 
 build:
-  number: 1
-  script:  {{ PYTHON }} -m pip install . --use-pep517 -vvv
+  number: 0
+  script:  {{ PYTHON }} -m pip install . -vvv --no-deps --no-build-isolation
 
 requirements:
   build:
     - {{ compiler('c') }}
+autoco    - autoconf
   host:
     - cffi >=1.3.0
     - requests
