--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-autoco    - autoconf
+    - autoconf
   host:
     - cffi >=1.3.0
     - requests
