--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,11 +12,14 @@ source:
 build:
   number: 0
   script:  {{ PYTHON }} -m pip install . -vvv --no-deps --no-build-isolation
+  skip: True  # [not linux or not py38]
 
 requirements:
   build:
     - {{ compiler('c') }}
-    - autoconf
+    - automake
+    - libtool
+    - make
   host:
     - cffi >=1.3.0
     - requests
