--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,14 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - automake
-    - libtool
-    - make
+    - {{ compiler('c') }}  # [not win]
+    - automake  # [not win]
+    - libtool  # [not win]
+    - make  # [not win]
+    - {{ compiler('m2w64_c') }}  # [win]
+    - m2-automake  # [win]
+    - m2-libtool  # [win]
+    - m2-make  # [win]
   host:
     - cffi >=1.3.0
     - requests
