--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,10 +20,10 @@ requirements:
     - automake  # [not win]
     - libtool  # [not win]
     - make  # [not win]
-    - {{ compiler('m2w64_c') }}  # [win]
-    - m2-automake  # [win]
-    - m2-libtool  # [win]
-    - m2-make  # [win]
+    - autotools_clang_conda  # [win]
+    # - m2-automake  # [win]
+    # - m2-libtool  # [win]
+    # - m2-make  # [win]
   host:
     - cffi >=1.3.0
     - requests
