--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "coincurve" %}
-{% set version = "1{% set version = "18.0.0" %}
+{% set version = "18.0.0" %}
 
 package:
   name: {{ name }}
