--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  script:  {{ PYTHON }} -m pip install . -vvv --no-deps --no-build-isolation
+  # script:  {{ PYTHON }} -m pip install . -vvv --no-deps --no-build-isolation
   skip: True  # [not win or not py==38]
 
 requirements:
