DBG: MANIFEST.in to remove abspath?

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
     - fix-SOURCES.txt-abspath.patch  # [not win]
     - fix-pyproject.toml.patch
     - fix-setup.py-win-abspath.patch  # [win]
+    - fix-MANIFEST.in.patch
 
 build:
   number: 0
