--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,9 @@ source:
 build:
   number: 0
   skip: True  # [not win or not py==38]
-
+  script_env:
+￼    - COINCURVE_UPSTREAM_REF=ddf2b2910eb19032f8dd657c66735115ae24bfba
+￼
 requirements:
   build:
     - {{ compiler('c') }}
