--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,10 +8,15 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: c86626afe417a09d8e80e56780efcae3ae516203b23b5ade84813916e1c94fc1
+  patches:
+    - fix-pyproject.toml.patch
+    - fix-MANIFEST.in.patch
 
 build:
   number: 0
-  # script:  {{ PYTHON }} -m pip install . -vvv --no-deps --no-build-isolation
+  skip: True  # [not win or not py==38]
+  script_env:
+    - COINCURVE_UPSTREAM_REF=ddf2b2910eb19032f8dd657c66735115ae24bfba
 
 requirements:
   build:
@@ -19,7 +24,16 @@ requirements:
     - automake  # [not win]
     - libtool  # [not win]
     - make  # [not win]
-    - autotools_clang_conda  # [win]
+    - m2-autoconf  # [win]
+    - m2-automake-wrapper  # [win]
+    - m2-base  # [win]
+    - m2-bash  # [win]
+    - m2-libtool  # [win]
+    - m2-m4  # [win]
+    - m2-gzip  # [win]
+    - m2-make  # [win]
+    - m2-sed  # [win]
+    - m2-tar  # [win]
   host:
     - cffi >=1.3.0
     - requests
