REF: missing patch. add tests (just to be sure it works)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,8 +49,12 @@ test:
     - coincurve
   requires:
     - pip
+    - pytest
   commands:
     - pip check
+    - pytest
+  files:
+    - tests
 
 about:
   home: https://github.com/ofek/coincurve
