--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ source:
 build:
   number: 1
   script:  {{ PYTHON }} -m pip install . --use-pep517 -vvv
-  skip: true  # [not linux and not py==3.9]
+  skip: true  # [not linux or py!=38]
 
 requirements:
   build:
