--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,12 @@ source:
 build:
   number: 1
   script:  {{ PYTHON }} -m pip install . --use-pep517 -vvv
+  skip: true  # [not win or py != 3.10]
 
 requirements:
   build:
     - {{ compiler('c') }}
+    - libsecp256k1
   host:
     - cffi >=1.3.0
     - libsecp256k1
