--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,9 +15,9 @@ build:
   number: 0
   script: {{ PYTHON }} -m pip install . --use-pep517 -vvv
     script_env:
-      COINCURVE_IGNORE_SYSTEM_LIB='0'
-      COINCURVE_UPSTREAM_REF='__no_upstream__'
-      PKG_CONFIG_PATH='{{ BUILD_DIR }}/lib/pkgconfig'
+      - COINCURVE_IGNORE_SYSTEM_LIB='0'
+      - COINCURVE_UPSTREAM_REF='__no_upstream__'
+      - PKG_CONFIG_PATH='{{ BUILD_DIR }}/lib/pkgconfig'
   skip: true  # [not win or py != 310]
 
 requirements:
