--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,14 +8,20 @@ package:
 source:
   url: https://github.com/ofek/coincurve/archive/refs/tags/v{{ version }}.tar.gz
   sha256: 848afd3707680dd820184c166e873e099b4ff65d413b8958f34d2020efc703e9
+  patches:
+    - add-conda-PKG_CONFIG_PATH.patch
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --use-pep517 -vvv
+  script_env:
+    - COINCURVE_IGNORE_SYSTEM_LIB='0'
+    - COINCURVE_UPSTREAM_REF='__no_upstream__'
 
 requirements:
   build:
     - {{ compiler('c') }}
+    - libsecp256k1
   host:
     - cffi >=1.3.0
     - libsecp256k1
