--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,28 +8,31 @@ package:
 source:
   url: https://github.com/ofek/coincurve/archive/refs/tags/v{{ version }}.tar.gz
   sha256: be07831e54e2b6194b5f6425b3aca3e35dd23f993f57b403b5e33afef9847f5b
-  patches:
-    - add-conda-PKG_CONFIG_PATH.patch
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --use-pep517 -vvv
   script_env:
-    - COINCURVE_IGNORE_SYSTEM_LIB='0'
+    - COINCURVE_IGNORE_SYSTEM_LIB='OFF'
     - COINCURVE_UPSTREAM_REF='__no_upstream__'
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
-    - libsecp256k1
+    - cmake >=3.15
+    - make  # [linux]
   host:
     - cffi >=1.3.0
+    - hatchling >=1.24.2
     - libsecp256k1
-    - requests
     - pip
     - pkg-config
+    - pypkgconf  # [win]
     - python
+    - requests
+    - scikit-build-core
+    - setuptools
   run:
     - asn1crypto
     - {{ pin_compatible('cffi') }}
