--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://github.com/ofek/coincurve/archive/refs/tags/v{{ version }}.tar.gz
   sha256: be07831e54e2b6194b5f6425b3aca3e35dd23f993f57b403b5e33afef9847f5b
+  patches:
+    - 0001-remove-pypkgconf-win.patch
 
 build:
   number: 0
@@ -28,7 +30,6 @@ requirements:
     - libsecp256k1
     - pip
     - pkg-config
-    - pypkgconf  # [win]
     - python
     - requests
     - scikit-build-core
