--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - {{ stdlib("c") }}
     - cmake >=3.15
     - make  # [linux]
+    - python
   host:
     - cffi >=1.3.0
     - hatchling >=1.24.2
