--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,7 @@ requirements:
     - setuptools
   run:
     - asn1crypto
-    - {{ pin_compatible('cffi') }}
+    - {{ pin_compatible("cffi") }}
     - python
 
 test:
