--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,9 @@ requirements:
     - {{ compiler("c") }}
     - {{ stdlib("c") }}
     - cmake >=3.15
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - make  # [linux]
-    - python
+    - python  # [build_platform != target_platform]
   host:
     - cffi >=1.3.0
     - hatchling >=1.24.2
