--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - {{ stdlib("c") }}
     - cmake >=3.15
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
-    - make  # [linux]
+    - make  # [linux or osx]
     - python  # [build_platform != target_platform]
   host:
     - cffi >=1.3.0
