--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
   build:
     - {{ compiler("c") }}
     - {{ stdlib("c") }}
+    - cffi >=1.3.0  # [build_platform != target_platform]
     - cmake >=3.15
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - make  # [linux or osx]
