(fix) cffi backend. ignore exports?

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ requirements:
     - setuptools
   run:
     - asn1crypto
-    # - {{ pin_compatible("cffi") }}
+    - {{ pin_compatible("cffi") }}
     - python
 
 test:
