--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - {{ compiler("c") }}
     - {{ stdlib("c") }}
     - automake  # [linux or osx]
-    - automake-wrapper  # [not (linux or osx)]
+    - m2-automake-wrapper  # [not (linux or osx)]
     - cffi >=1.3.0  # [build_platform != target_platform]
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - make  # [linux or osx]
