--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ requirements:
     - scikit-build-core >=0.9.0
     - setuptools
   run:
-    - {{ pin_compatible("cffi") }}
+    - libffi
     - python
 
 test:
