--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,10 @@ build:
     - COINCURVE_UPSTREAM_REF='__no_upstream__'
     - COINCURVE_VENDOR_CFFI=0
   ignore_run_exports:
+    - cffi
     - python
+  missing_dso_whitelist:
+    - $RPATH/ld-linux-x86-64.so.2  # [linux and (aarch64 or ppc64le)]
 
 requirements:
   build:
@@ -40,6 +43,7 @@ requirements:
     - scikit-build-core >=0.9.0
     - setuptools
   run:
+    - {{ pin_compatible('cffi') }}
     - libffi
     - python
 
